--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="footer-copyright">&copy; 2018 Switch, all rights reserved</div>
+                    <div class="footer-copyright">&copy; 2024 Divius Josh, all rights reserved</div>
                 </div>
             </div>
         </footer>
