--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Divius - Developers</title>
+  <title>Contact - Divius</title>
   <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
